--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -187,7 +187,6 @@
 
 /* Responsive cho màn hình nhỏ hơn 768px (Điện thoại) */
 @media (max-width: 768px) {
-
   .header {
     height: 70px;
   }
@@ -209,8 +208,8 @@
     align-items: flex-start;
     gap: 10px;
     padding: 10px;
-  } 
-  .header-nav::after{
+  }
+  .header-nav::after {
     content: "";
     display: block;
     width: 100%;
@@ -237,7 +236,6 @@
   }
   .header-logo-container {
     flex: 1;
-    
   }
   .header-nav-container {
     display: none;
@@ -269,11 +267,9 @@
     height: 3px;
     background-color: #333;
   }
-  .header-logo{
+  .header-logo {
     float: left;
   }
-
-  
 }
 
 /* Responsive cho màn hình rất nhỏ (dưới 480px) */
@@ -282,7 +278,7 @@
     height: auto; /* Allow the header to expand based on content */
     padding-bottom: 20px; /* Add padding to ensure dropdown visibility */
   }
-  .header-nav::after{
+  .header-nav::after {
     display: none;
   }
 
@@ -298,7 +294,6 @@
 
   .header-logo-container {
     flex: 1;
-    
   }
 
   .header-nav-container {
@@ -356,7 +351,6 @@
     float: left;
     width: 88px;
     height: 60px;
- 
   }
 
   .header-nav {
@@ -370,9 +364,9 @@
     font-size: 14px;
     gap: 8px;
     margin: 10px 0;
-    align-items: normal
+    align-items: normal;
   }
-  .select-nav{
+  .select-nav {
     margin-left: 15px;
   }
 
@@ -392,7 +386,7 @@
     margin-left: 25px;
   }
 
-  .popup-header{
+  .popup-header {
     display: flex;
     flex-direction: column;
   }
@@ -411,7 +405,7 @@
     display: flex; /* Ensure dropdown is visible */
     flex-direction: column; /* Stack items vertically */
   }
-  .option-child{
+  .option-child {
     font-size: 13px;
   }
   .dropdown-container {
@@ -433,10 +427,9 @@
     background-color: white;
   }
   .dropdown-submenu {
-   padding-left: 10px;
-   
+    padding-left: 10px;
   }
-  .dropdown-btn{
+  .dropdown-btn {
     background-color: white;
   }
   .dropdown-submenu-item {
@@ -446,4 +439,11 @@
     margin: 5px 0;
     border-radius: 5px;
   }
+}
+
+/* css active khi click chon trên menu*/
+.header-nav a.active {
+  font-weight: bold;
+  color: #6c63ff;
+  border-bottom: 2px solid #6c63ff;
 }
