--- a/src/components/TestPage/Vietnam/Hiden.css
+++ b/src/components/TestPage/Vietnam/Hiden.css
@@ -3,6 +3,9 @@
   margin: 100px auto;
   padding: 20px;
 }
+span {
+  font-weight: 600;
+}
 
 .guide-title {
   text-align: center;
@@ -533,7 +536,6 @@
 .guide-container-Hiden {
   max-width: 1200px;
   margin: 0 auto;
-
 }
 
 .guide-title-Hiden {
@@ -553,7 +555,7 @@
   border-radius: 5px;
   overflow: hidden;
 }
-.accordion-content-Hiden{
+.accordion-content-Hiden {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -657,7 +659,7 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.9);
   display: flex;
-  justify-content:center;
+  justify-content: center;
   align-items: center;
   z-index: 1000;
 }
@@ -752,30 +754,28 @@
   height: 100%;
   object-fit: cover;
 }
-.clicked{
+.clicked {
   background-color: #2980b9;
   color: white;
 }
-.tab-image-hiden{
-   display: flex;
-   flex-direction: row;
-   width: 100%;
-   margin-bottom: 10px;
-   
+.tab-image-hiden {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin-bottom: 10px;
 }
-.language-button-Hiden{
- padding: 4px 6px;
- width: 100%;
- max-width: 1024px;
- height: 30px;
+.language-button-Hiden {
+  padding: 4px 6px;
+  width: 100%;
+  max-width: 1024px;
+  height: 30px;
 }
-.guide-imagecheckin-Hiden{
+.guide-imagecheckin-Hiden {
   max-width: 900px;
   width: 100%;
   height: 700px;
   object-fit: contain;
   margin: 10px 0;
-  
 }
 
 .event-content-Hiden {
@@ -803,10 +803,10 @@
   cursor: pointer;
 }
 
-.video-container-Hiden{
+.video-container-Hiden {
   width: 1024px;
- 
-  margin:10px auto;
+
+  margin: 10px auto;
 }
 
 .view-all-button-Hiden:hover {
@@ -838,20 +838,18 @@
   font-size: 16px;
 }
 
-@media (max-width: 1024px){
-  .video-container-Hiden{
-    max-width:1000px;
+@media (max-width: 1024px) {
+  .video-container-Hiden {
+    max-width: 1000px;
     width: 90%;
     margin-top: 10px;
-  
   }
-  .accordion-Hiden{
-    max-width:1000px;
+  .accordion-Hiden {
+    max-width: 1000px;
     width: 90%;
-    margin : 0 auto;
-  
+    margin: 0 auto;
   }
-} 
+}
 @media (max-width: 768px) {
   .popup-content-Hiden {
     width: 95%;
@@ -865,39 +863,34 @@
   .event-card-Hiden {
     width: 100%;
   }
-  .video-container-Hiden{
-    max-width:730px;
+  .video-container-Hiden {
+    max-width: 730px;
     width: 90%;
-    
+
     margin-top: 10px;
-  
   }
 }
-@media (max-width: 480px){
-  .video-container-Hiden{
+@media (max-width: 480px) {
+  .video-container-Hiden {
     max-width: 380px;
-     width: 90%;
+    width: 90%;
     margin-top: 10px;
-  
   }
-  h2{
+  h2 {
     font-size: 20px;
   }
-  .accordion-Hiden{
+  .accordion-Hiden {
     max-width: 380px;
-  
   }
 }
 
 @media (max-width: 375px) {
-  .video-container-Hiden{
+  .video-container-Hiden {
     max-width: 360px;
-     width: 100%;
+    width: 100%;
     margin-top: 10px;
-  
   }
-  .accordion-Hiden{
+  .accordion-Hiden {
     max-width: 360px;
   }
 }
-
