--- a/src/pages/SearchResults/SearchResults.css
+++ b/src/pages/SearchResults/SearchResults.css
@@ -7,6 +7,7 @@
   background-color: white;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   font-family: "Segoe UI", sans-serif;
+  margin-top: 100px;
 }
 
 .section {
