--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -2,8 +2,8 @@
   position: relative;
   width: 100%;
   max-width: 1920px;
-  height: 44vh;
-  margin:50px auto;
+  height: 60vh;
+  margin: 50px auto;
 }
 
 .img-contact {
@@ -42,7 +42,7 @@
   border-radius: 10px;
   width: 80%;
   max-width: 1200px;
-  z-index: 2;
+  z-index: 1;
 }
 
 .contact-left {
@@ -68,7 +68,7 @@
   font-weight: bold;
   transition: all 0.3s ease;
   border-radius: 5px;
-  height: 70px ;
+  height: 70px;
   padding: 0 30px !important;
   font-size: 16px !important;
   min-width: 180px;
@@ -114,37 +114,34 @@
 
 @media (max-width: 1024px) {
   .form-contact {
-    height: 300px;
+    height: 370px;
     top: 53%;
   }
-  
 
-.custom-form .ant-input{
+  .custom-form .ant-input {
     height: 40px;
+  }
+  .send-button {
+    height: 54px;
+  }
+  .img-contact {
+    height: 100%;
+  }
 }
-.send-button{
-  height: 54px;
-}
-.img-contact {
- 
-  height: 111%;
-}
-  
-}
-
-
 
 @media (max-width: 768px) {
+  .main-contact {
+    height: 44vh;
+  }
   .form-contact {
- 
     top: 40%;
-}
+  }
 }
 
 @media (max-width: 480px) {
   .main-contact {
-    height: 27vh;
-    margin-bottom: 416px;
+    height: 44vh;
+    margin-bottom: 270px;
   }
   .form-contact {
     flex-direction: column;
@@ -161,7 +158,7 @@
     font-size: 28px;
   }
   .img-contact {
-    height: 644px
+    height: 640px;
   }
   .custom-form .ant-input {
     height: 35px;
@@ -169,8 +166,11 @@
 }
 
 @media (max-width: 375px) {
- .main-contact{
+  .main-contact {
     height: 27vh;
     margin-bottom: 458px;
+  }
+  .contact-left {
+    margin-top: 90px;
   }
 }
