--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,20 @@
 #root {
   text-align: center;
 }
-html, body {
+html,
+body {
   padding: 0;
   margin: 0;
   width: 100%;
   overflow-x: hidden;
+  background-color: white;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
-
-
 
 .logo {
   height: 6em;
