--- a/src/index.css
+++ b/src/index.css
@@ -3,19 +3,20 @@
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(8, 8, 8, 0.87) !important;
   background-color: #242424;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
 }
 html {
   box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
@@ -32,7 +33,7 @@ body {
   margin: 0;
   /* display: flex; */
   place-items: center;
-  
+
   min-width: 320px;
   min-height: 100vh;
 }
