--- a/src/components/RoomCard/RoomCard.css
+++ b/src/components/RoomCard/RoomCard.css
@@ -210,15 +210,25 @@
   cursor: pointer;
   border: none;
 }
-
+button {
+  color: white !important;
+}
 .btn-select {
-  background: #263238;
+  background: #198ec8;
   color: #fff;
+  transition: background 0.3s ease;
+}
+.btn-select:hover {
+  background: #025d8b; /* màu đậm hơn */
 }
 
 .btn-book {
-  background: #4caf50;
+  background: #389b3b;
   color: #fff;
+  transition: background 0.3s ease;
+}
+.btn-book:hover {
+  background: #037908; /* màu đậm hơn */
 }
 
 .qty-control.styled {
@@ -372,6 +382,7 @@
     gap: 8px;
   }
   .room-image img {
+    border-radius: 6px;
     width: 100%;
     height: 140px;
   }
@@ -381,10 +392,9 @@
   .room-icons {
     font-size: 13px;
     gap: 8px;
-    display: flex;
-    justify-content: center; /* căn giữa theo chiều ngang */
+    display: contents;
+    justify-content: center;
     align-items: center;
-    margin-top: -20px;
     transform: scale(0.9);
   }
   .room-ic {
@@ -436,7 +446,7 @@
     margin: 0;
   }
   .room-policy strong {
-    font-size: 20px;
+    font-size: 17.5px;
   }
   .room-policy ul {
     font-weight: bold;
@@ -444,17 +454,23 @@
     font-size: 14px;
   }
   .room-promotions strong {
-    font-size: 20px;
+    font-size: 17px;
   }
 
   .discount-tag {
     background-color: #e74c3c;
     color: white;
-    padding: 6px 12px;
+    padding: 14px 18px;
     border-radius: 6px;
-    font-size: 13px;
+    font-size: 20px;
     font-weight: bold;
     display: inline-block;
+  }
+  .room-promotions .badge {
+    font-size: 14px;
+    padding: 4px 8px;
+    margin-right: 6px;
+    margin-top: 4px;
   }
 
   .room-ic {
@@ -507,9 +523,25 @@
   }
   .night-info {
     border-radius: 6px;
-    border: 1px solid #ccc;
+    border: 1px solid#302b2b;
+    font-weight: bold;
   }
   .react-datepicker-wrapper {
     display: flex;
+  }
+  .date-picker-container label {
+    text-align: center;
+  }
+  button {
+    color: white !important;
+  }
+  .react-datepicker__close-icon button {
+    cursor: pointer;
+    background-color: transparent;
+    border: 0;
+    outline: 0;
+    padding: 0 105px 0 0;
+    position: absolute;
+    top: 0;
   }
 }
