--- a/src/components/RoomCard/RoomCard.css
+++ b/src/components/RoomCard/RoomCard.css
@@ -1,4 +1,5 @@
 .room-card {
+  padding-bottom: 15px;
   display: flex;
   flex-direction: column;
   border: 1px solid #ddd;
@@ -31,7 +32,6 @@
 }
 
 .room-image img {
-  width: 250px;
   height: 150px;
   object-fit: cover;
 }
@@ -361,6 +361,7 @@ button {
 }
 @media (max-width: 768px) {
   .room-card {
+    padding-bottom: 15px;
     margin: 12px 12px;
     max-width: 100%;
     margin: 8px 0;
@@ -534,14 +535,5 @@ button {
   }
   button {
     color: white !important;
-  }
-  .react-datepicker__close-icon button {
-    cursor: pointer;
-    background-color: transparent;
-    border: 0;
-    outline: 0;
-    padding: 0 105px 0 0;
-    position: absolute;
-    top: 0;
   }
 }
