--- a/src/pages/SearchResults/SearchResults.css
+++ b/src/pages/SearchResults/SearchResults.css
@@ -9,6 +9,9 @@
   font-family: "Segoe UI", sans-serif;
   margin-top: 100px;
 }
+.no-searchbar .carousel-wrapper {
+  margin-top: 110px;
+}
 
 .section {
   display: flex;
